[tool.poetry]
name = "json-search-lang"
version = "0.1.1"
description = "A way to parse json in a fancy matter!"
authors = ["Vivax <vivax3794@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["json"]
classifiers = [
	"Development Status :: 1 - Planning",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
